# rust-bazel-cross-compile-example-llvm

./: BUILD  Cargo.toml  MODULE.bazel  README.md  rust.MODULE.bazel  settings.bzl
.github/workflows/: release.yml
constraints/amd64/: BUILD
rust/hello_world/: BUILD  README.md
rust/hello_world/src/: main.rs
