"""Configuration for Rust toolchains and dependencies.

This module sets up the Rust toolchain, LLVM toolchain, and required crates
for Rust service development.
"""

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

# INTEL/AMD64 Sysroot.
sysroot(
    name = "sysroot_linux_amd64",
    exclude_patterns = ["./dev/*"],
    sha256 = "2db6f4172fe228eceefb1d7fc5cf3b28049bbbf30cde22da9dc74d2780c8b4b9",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots/releases/download/2026-01-13/debian-trixie-sysroot-amd64.tar.xz"],
)

# ARM 64 Sysroot.
sysroot(
    name = "sysroot_linux_arm64",
    exclude_patterns = ["./dev/*"],
    sha256 = "f608350bba1f26db700c6c9dc3739648e23920b0831f839bf2a1708501c07142",
    urls = ["https://github.com/amsokol/cross-compilation-sysroots/releases/download/2026-01-13/debian-trixie-sysroot-arm64.tar.xz"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "21.1.8",
    extra_llvm_distributions = {
        "LLVM-21.1.8-Linux-ARM64.tar.xz": "65ce0b329514e5643407db2d02a5bd34bf33d159055dafa82825c8385bd01993",
        "LLVM-21.1.8-Linux-X64.tar.xz": "b3b7f2801d15d50736acea3c73982994d025b01c2f035b91ae3b49d1b575732b",
        "LLVM-21.1.8-macOS-ARM64.tar.xz": "b95bdd32a33a81ee4d40363aaeb26728a26783fcef26a4d80f65457433ea4669",
    },
)

llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_amd64//sysroot:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_arm64//sysroot:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

RUST_EDITION = "2024"

RUST_VERSION = "1.93.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    sha256s = {
        "cargo-1.93.0-aarch64-apple-darwin.tar.xz": "6443909350322ad07f09bb5edfd9ff29268e6fe88c7d78bfba7a5e254248dc25",
        "clippy-1.93.0-aarch64-apple-darwin.tar.xz": "0b6e943a8d12be0e68575acf59c9ea102daf795055fcbbf862b0bfd35ec40039",
        "llvm-tools-1.93.0-aarch64-apple-darwin.tar.xz": "c4ec87d184c806582cde0314698f88b60ac4f63dbc8857a16314726e1d43585a",
        "rust-std-1.93.0-aarch64-apple-darwin.tar.xz": "8603c63715349636ed85b4fe716c4e827a727918c840e54aff5b243cedadf19b",
        "rust-std-1.93.0-aarch64-unknown-linux-gnu.tar.xz": "84e82ff52c39c64dfd0e1c2d58fd3d5309d1d2502378131544c0d486b44af20a",
        "rust-std-1.93.0-x86_64-unknown-linux-gnu.tar.xz": "a849a418d0f27e69573e41763c395e924a0b98c16fcdc55599c1c79c27c1c777",
        "rustc-1.93.0-aarch64-apple-darwin.tar.xz": "092be03c02b44c405dab1232541c84f32b2d9e8295747568c3d531dd137221dc",
    },
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

cargo = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
cargo.from_cargo(
    name = "cargo",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
)
use_repo(cargo, "cargo")
